// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.test.js click event 1`] = `
<div>
  <img
    alt="Vue logo"
    height="200px"
    src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Vue.js_Logo_2.svg/1200px-Vue.js_Logo_2.svg.png"
  />
  
  pepe =&gt; 2

</div>
`;

exports[`App.test.js has the expected html structure 1`] = `
<div>
  <img
    alt="Vue logo"
    height="200px"
    src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Vue.js_Logo_2.svg/1200px-Vue.js_Logo_2.svg.png"
  />
  
  pepe =&gt; 1

</div>
`;
